--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 
-:root{
+:root {
   /* lightmode */
   --h1-lightmode: #2B3442;
   --searchbtn: #0079ff;
@@ -14,16 +14,16 @@
 
 /* GENERAL STYLES */
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-html, body{
+html, body {
   height: 100vh;
   background-color: var(--backgroundlight);
 }
-.wrapper{
+.wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,11 +32,11 @@ html, body{
   min-width: 327px;                /*TODO: Make sure width and height is correct*/
   max-width: 730px; 
 }
-.header,.srch,.main{
+.header,.srch,.main {
   width: 100%;
   max-width: 327px;
 }
-.srch, .main{
+.srch, .main {
   background-color: hsl(0, 0%, 100%);
   box-shadow: 0 3px 10px 1px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
@@ -44,28 +44,28 @@ html, body{
 
 /* TYPOGRAPHY */
 
-h1,h2,h3,h4,p,a,input,button{
+h1,h2,h3,h4,p,a,input,button {
   font-family: 'Space mono', sans-serif;
   font-weight: 400;                      
 }
-h1,h2,button{
+h1,h2,button {
   font-weight: 700;
 }
 
 /* TITLE WITH LIGHT-DARK-MODE */
 
-.header{
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center; 
   margin: 2.4375rem auto 1.75rem auto;
 }
-.header__devfinder{
+.header__devfinder {
   font-size: 1.625rem;
   color: var(--DevFinder-clr);
   line-height: 2.4375rem;
 }
-.header__lghtDrkToggle{
+.header__lghtDrkToggle {
   text-decoration: none;
   font-size: 0.8125rem;
   font-weight: 700;
@@ -73,25 +73,25 @@ h1,h2,button{
   letter-spacing: 2.5px;
   color:#4B6A9B;
 }
-.sunimg{
+.sunimg {
   margin-left: 1rem;
   vertical-align: bottom;
 }
 
-/* SEARCH BAR */
+/* Search Bar */
 
-.srch{
+.srch {
   margin: 0 auto 1rem auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.search__img{
+.search__img {
   margin: 1.25rem 0.5593rem 1.25rem 1rem;
   width: 20px;
   height: 20px;
 }
-input{
+input {
   line-height: 1.563rem;
   font-size: 0.8125rem;
   text-align: left;
@@ -99,7 +99,7 @@ input{
   border: none;
   letter-spacing: -1px; 
 }
-.btn{
+.btn {
   width: 25.68%;
   margin: auto;
   padding: 0.78rem 1rem;
@@ -113,41 +113,41 @@ input{
 
 /* MAIN PROFILE*/
 
-.srch, .main{
+.srch, .main {
     box-shadow: 5px 10px 18px rgba(70, 96, 187, 0.1986);          
 }
 
 /* HEADER */
 
-.profile{
+.profile {
   display: flex;
   justify-content: center;
   align-items: center; 
   margin: 2rem 4.375rem 1.75rem 1.5rem;
 }
-.profile__pic{
+.profile__pic {
   height: 70px;
   width: 70px;
   border-radius: 50%;
   background-color: black;
   margin-right: 1.188rem;
 }
-.profile__name{
+.profile__name {
   font-size: 1rem;
   line-height: 1.48rem;
   color: var(--h1-lightmode);
 }
-.profile__username, .profile__join-date{
+.profile__username, .profile__join-date {
   font-size: 0.8125rem;
   line-height: 1.2rem;
 }
-.profile__username{
+.profile__username {
   color: var(--searchbtn);
 }
 
 /* BODY CONTENT */
 
-.bio{
+.bio {
   font-size: 0.8125rem;
   line-height: 1.563rem;
   color: var(--bodytxt-color);
@@ -158,7 +158,7 @@ input{
 
 /* STATS */
 
-.stats{
+.stats {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -167,16 +167,16 @@ input{
   background-color: var(--backgroundlight);
   margin: 1.5rem auto;
 }
-.stats div{
+.stats div {
   padding: 1.125rem 0.875rem 1.187rem 0.9375rem;
   text-align: center;
 }
-.stats h4{
+.stats h4 {
   font-size: 0.6875rem;
   line-height: 1rem;
   color: var(--bodytxt-color);
 }
-.stats h2{
+.stats h2 {
   font-size: 1rem;
   line-height: 1.48rem;
   color: var(--h1-lightmode);
@@ -185,27 +185,27 @@ input{
 
 /* BOTTOM LINKS */
 
-.btm-links{
+.btm-links {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 56.57%; 
   margin: 1.5rem 7.375rem  2rem 1.5rem;
 }
-.btm-links a{
+.btm-links a {
   font-size: 0.8125rem;
   line-height: 1.2rem;
   text-decoration: none;
   color: var(--bodytxt-color);
   margin-bottom: 1rem;
 }
-.btm-links img{
+.btm-links img {
   /* This is to align images and text in links */
   margin-right: 0.8125rem;
   margin-bottom: -6px;   /* aligns image next to text */
   
 }
-.location img{
+.location img {
   /* This is to align San Fransico link with other links */
   margin-right: 19px;
 }
@@ -215,34 +215,34 @@ input{
   height of entire screen: 1024px     content height: 648px
 */
 
-@media(min-width: 768px){
-  .wrapper{
+@media(min-width: 768px) {
+  .wrapper {
     width: 74.61%;
     margin: 13.67vh auto 23.05vh;
   }
-  .header,.srch,.main{
+  .header,.srch,.main {
     max-width: 573px;
   }
   /* MAIN HEADER */
-  .header{
+  .header {
     margin: 0 auto 2.25rem;
   }
 
   /* SEARCH BAR */
-  .srch{
+  .srch {
     margin: 0 auto 1.5rem;
     justify-content: space-between;
   }
-  .search__img{
+  .search__img {
     width: 24px;
     height: 24px;
     margin: 1.4375rem 0 1.375rem 2rem;
   }
-  input{
+  input {
     font-size: 1.125rem;
     letter-spacing: 0;
   }
-  .btn{
+  .btn { 
     padding: 0.781rem 1.5rem 0.844rem;
     margin: 0.593rem 0.625rem;
     width: 18.5%;
@@ -251,60 +251,60 @@ input{
   }
   
   /* MAIN PROFILE */
-  .profile{
+  .profile {
     justify-content: flex-start;
     margin: 2.5rem auto 1.5rem 2.5rem;
   }
-  .profile__pic{
+  .profile__pic {
     height: 117px;
     width: 117px;
     margin-right: 2.56rem;
   }
-  .profile__name{
+  .profile__name {
     font-size: 1.625rem;
     line-height: 2.4rem;
   }
-  .profile__username{
+  .profile__username {
     font-size: 1rem;
     line-height: 1.48rem;
   }
-  .profile__join-date{
+  .profile__join-date {
     font-size: 0.9375rem;
     line-height: 1.388rem;
   }
   /* BODY CONTENT */
-  .bio{
+  .bio {
     font-size: 0.9375rem;
   }
   
   /* STATS */
-  .stats{
+  .stats {
     width: 86%;
     margin: 2rem auto 1.875rem;
     border: 1px solid black;   /*remove border*/
   }
-  .stats div{
+  .stats div {
     padding-top: 0.9375rem;
     padding-bottom: 1.06rem;
   }
-  .stats h4{
+  .stats h4 {
     font-size: 0.8125rem;
     line-height: 1.2rem;
   }
-  .stats h2{
+  .stats h2 {
     font-size: 1.375rem;
     line-height: 2rem;
     margin-top: 1px;
   }
   /* BOTTOM LINKS */
-  .btm-links{
+  .btm-links {
     width: 74.87%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-left: 2.5rem;
     margin-right: 18.15%;
   }
-  .btm-links a{
+  .btm-links a {
     font-size: 0.937rem;
     line-height: 1.39rem;
     margin-bottom: 15px;
