--- a/styles.css
+++ b/styles.css
@@ -338,5 +338,18 @@ input {
     margin-left: 138px;
     padding-top: 5px;
   }
+  .profile {
+    margin-bottom: 0px;
+  }
+  .bio, .stats, .btm-links {
+    width: 480px;
+  }
+  .bio, .stats {
+    margin-right: 48px;
+  }
+  .btm-links {
+    margin: 37px 99px 48px 202px;
+  }
+  
 
 } 
